# lab06

./: CMakeLists.txt  CPackConfig.cmake  README.md  lab06.deb
.github/workflows/: cmake.yml
